<resources>
    <string name="app_name">Points</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="but_reset">С</string>
    <string name="but_10">10</string>
    <string name="but_0">0</string>
    <string name="but_3">3</string>
    <string name="but_2">2</string>
    <string name="but_1">1</string>
    <string name="but_6">6</string>
    <string name="but_5">5</string>
    <string name="but_4">4</string>
    <string name="but_9">9</string>
    <string name="but_8">8</string>
    <string name="but_7">7</string>
    <string name="but_save">save</string>

    <string name="rg0">General</string>
    <string name="rg1">Meal</string>
    <string name="rg2">Fitness</string>
    <string name="rg3">Mind</string>
    <string name="rg4">Job</string>
    <string name="rg5">Learn</string>
    <string name="rg6">Homework</string>

    <string-array name="cat">
        <item>General</item>
        <item>Meal</item>
        <item>Fitness</item>
        <item>Mind</item>
        <item>Job</item>
        <item>Learn</item>
        <item>Homework</item>
    </string-array>


    <string name="rg2_1">fit</string>
    <string name="rg2_2">running</string>
    <string name="rg2_3">morn fit</string>
    <string name="rg2_4">work-out</string>
    <string name="rg2_5">cycle</string>
    <string name="rg2_6">gym</string>
    <string name="rg2_7">yoga</string>
    <string name="rg2_8">cold</string>

    <string-array name="cat_fit">
        <item>fit</item>
        <item>running</item>
        <item>morn fit</item>
        <item>work-out</item>
        <item>cycle</item>
        <item>gym</item>
        <item>yoga</item>
        <item>cold</item>
    </string-array>

    <string name="rg3_1">General</string>
    <string name="rg3_2">Confidence</string>
    <string name="rg3_3">Circs</string>
    <string name="rg3_4">Will</string>
    <string name="rg3_5">Job</string>
    <string name="rg3_6">Around</string>
    <string name="rg3_7">Accident</string>
    <string name="rg3_8">Calm</string>

    <string-array name="cat_mind">
        <item>General</item>
        <item>Confidence</item>
        <item>Circs</item>
        <item>Will</item>
        <item>Job</item>
        <item>Around</item>
        <item>Accident</item>
        <item>Calm</item>
    </string-array>


    <string name="rg5_1">General</string>
    <string name="rg5_2">Anki learn</string>
    <string name="rg5_3">Anki add</string>
    <string name="rg5_4">Tutorial</string>


    <string name="btn_stat">stat</string>
    <string name="back">назад</string>
    <string name="zero">0</string>
    <string name="timer_start_value">00:00</string>
    <string name="category">category</string>


</resources>
