<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonsFragment">

    <!-- TODO: Update blank fragment layout -->


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <EditText
                android:layout_span="2"
                android:id="@+id/et_point"
                android:layout_width="00dp"
            />

            <Button
                android:id="@+id/butSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_save"
                />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/but7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_7" />

            <Button
                android:id="@+id/but8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_8" />

            <Button
                android:id="@+id/but9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_9" />

        </TableRow>


        <TableRow>

            <Button
                android:id="@+id/but4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_4" />

            <Button
                android:id="@+id/but5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_5" />

            <Button
                android:id="@+id/but6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_6" />

        </TableRow>


        <TableRow>

            <Button
                android:id="@+id/but1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_1" />

            <Button
                android:id="@+id/but2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_2" />

            <Button
                android:id="@+id/but3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_3" />




        </TableRow>




        <TableRow>

            <Button
                android:id="@+id/but0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_0" />

            <Button
                android:id="@+id/but10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_10" />

            <Button
                android:id="@+id/but_с"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_reset" />




        </TableRow>



    </TableLayout>
</FrameLayout>